examples/chill/testcases/RIGHTANSWERS/regression.py.stderr
  File "AKp256.script", line 6
    source: AKp256.c
          ^
SyntaxError: invalid syntax
  File "AKp256hack.script", line 6
    source: AKp256hack.c
          ^
SyntaxError: invalid syntax
  File "AKp257.script", line 6
    source: AKp257.c
          ^
SyntaxError: invalid syntax
  File "bug1.script", line 7
    source: bug1.c
          ^
SyntaxError: invalid syntax
  File "coalesce.script", line 1
    source: coalesce.c
          ^
SyntaxError: invalid syntax
  File "distribute1.script", line 10
    source: distribute.c
          ^
SyntaxError: invalid syntax
  File "fuse_distribute.script", line 3
    source: fuse_distribute.sp2
          ^
SyntaxError: invalid syntax
  File "fuseexample.script", line 6
    source: fuseexample.c
          ^
SyntaxError: invalid syntax
  File "include.script", line 1
    source:include.c
          ^
SyntaxError: invalid syntax
  File "jacobi2.script", line 7
    source: jacobi2.c
          ^
SyntaxError: invalid syntax
  File "jacobi_simple.script", line 4
    source: jacobi_simple.sp2
          ^
SyntaxError: invalid syntax
  File "loopnoinit.script", line 1
    source:loopnoinit.c
          ^
SyntaxError: invalid syntax
  File "nonunimodular.script", line 9
    source: nonunimodular.sp2
          ^
SyntaxError: invalid syntax
  File "p38.script", line 6
    source: p38.c
          ^
SyntaxError: invalid syntax
  File "p39.script", line 6
    source: p39.c
          ^
SyntaxError: invalid syntax
  File "p40.script", line 6
    source: p40.c
          ^
SyntaxError: invalid syntax
  File "p46.script", line 6
    source: p46.c
          ^
SyntaxError: invalid syntax
  File "p47.script", line 6
    source: p47.c
          ^
SyntaxError: invalid syntax
  File "p48.script", line 6
    source: p48.c
          ^
SyntaxError: invalid syntax
  File "p49.script", line 6
    source: p49.c
          ^
SyntaxError: invalid syntax
  File "peel1.script", line 7
    source: peel1234.c
          ^
SyntaxError: invalid syntax
  File "peel10.script", line 7
    source: peel9101112.c
          ^
SyntaxError: invalid syntax
  File "peel11.script", line 7
    source: peel9101112.c
          ^
SyntaxError: invalid syntax
  File "peel12.script", line 7
    source: peel9101112.c
          ^
SyntaxError: invalid syntax
  File "peel2.script", line 7
    source: peel1234.c
          ^
SyntaxError: invalid syntax
  File "peel3.script", line 7
    source: peel1234.c
          ^
SyntaxError: invalid syntax
  File "peel4.script", line 7
    source: peel1234.c
          ^
SyntaxError: invalid syntax
  File "peel5.script", line 8
    source: peel5678.c
          ^
SyntaxError: invalid syntax
  File "peel6.script", line 8
    source: peel5678.c
          ^
SyntaxError: invalid syntax
  File "peel7.script", line 8
    source: peel5678.c
          ^
SyntaxError: invalid syntax
  File "peel8.script", line 8
    source: peel5678.c
          ^
SyntaxError: invalid syntax
  File "peel9.script", line 7
    source: peel9101112.c
          ^
SyntaxError: invalid syntax
  File "permute1.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute10.script", line 10
    source: permute8910.c
          ^
SyntaxError: invalid syntax
  File "permute2.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute3.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute4.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute5.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute6.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute7.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "permute8.script", line 10
    source: permute8910.c
          ^
SyntaxError: invalid syntax
  File "permute9.script", line 10
    source: permute8910.c
          ^
SyntaxError: invalid syntax
  File "reverse1.script", line 10
    source: reverse.c
          ^
SyntaxError: invalid syntax
  File "reverse2.script", line 10
    source: reverse.c
          ^
SyntaxError: invalid syntax
  File "reverse3.script", line 10
    source: reverse.c
          ^
SyntaxError: invalid syntax
  File "scale1.script", line 10
    source: scale.c
          ^
SyntaxError: invalid syntax
  File "scale2.script", line 10
    source: scale.c
          ^
SyntaxError: invalid syntax
  File "scale3.script", line 10
    source: scale.c
          ^
SyntaxError: invalid syntax
  File "scale4.script", line 10
    source: scale.c
          ^
SyntaxError: invalid syntax
  File "shift1.script", line 10
    source: shift.c
          ^
SyntaxError: invalid syntax
  File "shift_to1.script", line 10
    source: shift_to.c
          ^
SyntaxError: invalid syntax
  File "shift_to2.script", line 10
    source: shift_to.c
          ^
SyntaxError: invalid syntax
  File "shift_to3.script", line 10
    source: shift_to.c
          ^
SyntaxError: invalid syntax
  File "skew1.script", line 10
    source: skew.c
          ^
SyntaxError: invalid syntax
  File "smooth_fused_64.script", line 1
    source:smooth_fused_64.c
          ^
SyntaxError: invalid syntax
  File "split1.script", line 10
    source: split.c
          ^
SyntaxError: invalid syntax
  File "split2.script", line 10
    source: split.c
          ^
SyntaxError: invalid syntax
  File "split3.script", line 10
    source: split.c
          ^
SyntaxError: invalid syntax
  File "structs.script", line 1
    source:structs.c
          ^
SyntaxError: invalid syntax
  File "tile1.script", line 10
    source: tile.c
          ^
SyntaxError: invalid syntax
  File "unroll1a.script", line 5
    source: unroll1.c
          ^
SyntaxError: invalid syntax
  File "unroll1b.script", line 5
    source: unroll1.c
          ^
SyntaxError: invalid syntax
  File "unroll1c.script", line 5
    source: unroll1.c
          ^
SyntaxError: invalid syntax
  File "unroll1d.script", line 5
    source: unroll1.c
          ^
SyntaxError: invalid syntax
  File "unroll2a.script", line 5
    source: unroll2.c
          ^
SyntaxError: invalid syntax
  File "unroll2b.script", line 5
    source: unroll2.c
          ^
SyntaxError: invalid syntax
  File "unroll2c.script", line 5
    source: unroll2.c
          ^
SyntaxError: invalid syntax
  File "unroll2d.script", line 5
    source: unroll2.c
          ^
SyntaxError: invalid syntax
